# manim-speech

./: README.md  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml
src/manim_speech/: __init__.py  scene.py  speech.py  translation.py  voiceover.py
src/manim_speech/services/: __init__.py  assemblyai.py  base.py  deepl.py  elevenlabs.py  openai.py  whisper.py
