[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manim_speech"
version = "0.2.0"
dependencies = [
    "manim",
    "pydantic",
    "mutagen",
    "polib"
]
requires-python = ">=3.12"
authors = [
    {name = "Celeste Ma", email = "mtcelestema@proton.me"}
]
description = "Manim plugin for adding speech to videos."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["manim", "speech", "voiceover", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
openai = ["openai"]
elevenlabs = ["elevenlabs"]
whisper = ["openai-whisper"]
assemblyai = ["assemblyai"]
deepl = ["deepl"]
chinese = ["opencc"]

[project.urls]
Homepage = "https://github.com/MtCelesteMa/manim-speech"
Repository = "https://github.com/MtCelesteMa/manim-speech"
"Bug Tracker" = "https://github.com/MtCelesteMa/manim-speech/issues"
